--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,31 @@
 
 	<build>
 		<plugins>
+			
+			<plugin>
+    <groupId>org.mule.tools.maven</groupId>
+    <artifactId>mule-maven-plugin</artifactId>
+    <version>2.0</version>
+    <configuration>
+        <deploymentType>cloudhub</deploymentType>
+        <!-- muleVersion is the runtime version as it appears on the CloudHub interface -->
+        <muleVersion>3.8.1</muleVersion>
+        <username>mmansurhhotmail</username>
+        <password>Test123</password>
+        <redeploy>true</redeploy>
+        <environment>Production</environment>
+    </configuration>
+    <executions>
+        <execution>
+            <id>deploy</id>
+            <phase>deploy</phase>
+            <goals>
+                <goal>deploy</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
+			
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-app-maven-plugin</artifactId>
